--- a/css/homenew.css
+++ b/css/homenew.css
@@ -1029,8 +1029,8 @@
     }
     
     .row {
-        /* display: flex;
-        flex-wrap: wrap; */
+       
+        flex-wrap: wrap; 
         display: inline-flex;
     }
     
